#7 $moduleName$ macro